--- a/scss/modules/boiler/layout/_content.scss
+++ b/scss/modules/boiler/layout/_content.scss
@@ -38,7 +38,7 @@ p {
       @include fp(font-size, 30, 50);
     }
     h2, h3, h4 {
-      margin: 1em 0;
+      margin: 1em 0 0.5em;
     }
     header {
       p {
