--- a/scss/vars/_global.scss
+++ b/scss/vars/_global.scss
@@ -81,13 +81,13 @@ $white: #fff;
 $red: #EF3E36;
 $yellow: #f5c100;
 $purple: #9b56b8;
-$pink: #FAD8D6;
+$pink: #e479b9;
 $green: #22ce6d;
 $orange: #e87d00;
 $grey: #a6a6a6;
 $brown: #614126;
 $lime: #32cd32;
-
+$navy: #324fb0;
 $primary: #806126;
 $secondary: #d84f25;
 $tertiary: #5d9e47;
