--- a/css/burger.css
+++ b/css/burger.css
@@ -5617,10 +5617,26 @@ input[type="submit"] {
   max-width: 8.33333%;
 }
 
+@media (max-width: 767px) {
+  .column-xs-1 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
 .column-xs-2 {
   -ms-flex-preferred-size: 16.66667%;
       flex-basis: 16.66667%;
   max-width: 16.66667%;
+}
+
+@media (max-width: 767px) {
+  .column-xs-2 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
 }
 
 .column-xs-3 {
@@ -5629,10 +5645,26 @@ input[type="submit"] {
   max-width: 25%;
 }
 
+@media (max-width: 767px) {
+  .column-xs-3 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
 .column-xs-4 {
   -ms-flex-preferred-size: 33.33333%;
       flex-basis: 33.33333%;
   max-width: 33.33333%;
+}
+
+@media (max-width: 767px) {
+  .column-xs-4 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
 }
 
 .column-xs-5 {
@@ -5641,10 +5673,26 @@ input[type="submit"] {
   max-width: 41.66667%;
 }
 
+@media (max-width: 767px) {
+  .column-xs-5 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
 .column-xs-6 {
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
   max-width: 50%;
+}
+
+@media (max-width: 767px) {
+  .column-xs-6 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
 }
 
 .column-xs-7 {
@@ -5653,10 +5701,26 @@ input[type="submit"] {
   max-width: 58.33333%;
 }
 
+@media (max-width: 767px) {
+  .column-xs-7 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
 .column-xs-8 {
   -ms-flex-preferred-size: 66.66667%;
       flex-basis: 66.66667%;
   max-width: 66.66667%;
+}
+
+@media (max-width: 767px) {
+  .column-xs-8 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
 }
 
 .column-xs-9 {
@@ -5665,10 +5729,26 @@ input[type="submit"] {
   max-width: 75%;
 }
 
+@media (max-width: 767px) {
+  .column-xs-9 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
 .column-xs-10 {
   -ms-flex-preferred-size: 83.33333%;
       flex-basis: 83.33333%;
   max-width: 83.33333%;
+}
+
+@media (max-width: 767px) {
+  .column-xs-10 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
 }
 
 .column-xs-11 {
@@ -5677,10 +5757,26 @@ input[type="submit"] {
   max-width: 91.66667%;
 }
 
+@media (max-width: 767px) {
+  .column-xs-11 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
 .column-xs-12 {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   max-width: 100%;
+}
+
+@media (max-width: 767px) {
+  .column-xs-12 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
 }
 
 .off-xs-1 {
@@ -5733,61 +5829,193 @@ input[type="submit"] {
         flex-basis: 8.33333%;
     max-width: 8.33333%;
   }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 767px) {
+  .column-sm-1 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
   .column-sm-2 {
     -ms-flex-preferred-size: 16.66667%;
         flex-basis: 16.66667%;
     max-width: 16.66667%;
   }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 767px) {
+  .column-sm-2 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
   .column-sm-3 {
     -ms-flex-preferred-size: 25%;
         flex-basis: 25%;
     max-width: 25%;
   }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 767px) {
+  .column-sm-3 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
   .column-sm-4 {
     -ms-flex-preferred-size: 33.33333%;
         flex-basis: 33.33333%;
     max-width: 33.33333%;
   }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 767px) {
+  .column-sm-4 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
   .column-sm-5 {
     -ms-flex-preferred-size: 41.66667%;
         flex-basis: 41.66667%;
     max-width: 41.66667%;
   }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 767px) {
+  .column-sm-5 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
   .column-sm-6 {
     -ms-flex-preferred-size: 50%;
         flex-basis: 50%;
     max-width: 50%;
   }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 767px) {
+  .column-sm-6 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
   .column-sm-7 {
     -ms-flex-preferred-size: 58.33333%;
         flex-basis: 58.33333%;
     max-width: 58.33333%;
   }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 767px) {
+  .column-sm-7 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
   .column-sm-8 {
     -ms-flex-preferred-size: 66.66667%;
         flex-basis: 66.66667%;
     max-width: 66.66667%;
   }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 767px) {
+  .column-sm-8 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
   .column-sm-9 {
     -ms-flex-preferred-size: 75%;
         flex-basis: 75%;
     max-width: 75%;
   }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 767px) {
+  .column-sm-9 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
   .column-sm-10 {
     -ms-flex-preferred-size: 83.33333%;
         flex-basis: 83.33333%;
     max-width: 83.33333%;
   }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 767px) {
+  .column-sm-10 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
   .column-sm-11 {
     -ms-flex-preferred-size: 91.66667%;
         flex-basis: 91.66667%;
     max-width: 91.66667%;
   }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 767px) {
+  .column-sm-11 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
   .column-sm-12 {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
     max-width: 100%;
   }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 767px) {
+  .column-sm-12 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
   .off-sm-1 {
     margin-left: 8.33333%;
   }
@@ -5829,61 +6057,193 @@ input[type="submit"] {
         flex-basis: 8.33333%;
     max-width: 8.33333%;
   }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 767px) {
+  .column-md-1 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
   .column-md-2 {
     -ms-flex-preferred-size: 16.66667%;
         flex-basis: 16.66667%;
     max-width: 16.66667%;
   }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 767px) {
+  .column-md-2 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
   .column-md-3 {
     -ms-flex-preferred-size: 25%;
         flex-basis: 25%;
     max-width: 25%;
   }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 767px) {
+  .column-md-3 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
   .column-md-4 {
     -ms-flex-preferred-size: 33.33333%;
         flex-basis: 33.33333%;
     max-width: 33.33333%;
   }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 767px) {
+  .column-md-4 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
   .column-md-5 {
     -ms-flex-preferred-size: 41.66667%;
         flex-basis: 41.66667%;
     max-width: 41.66667%;
   }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 767px) {
+  .column-md-5 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
   .column-md-6 {
     -ms-flex-preferred-size: 50%;
         flex-basis: 50%;
     max-width: 50%;
   }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 767px) {
+  .column-md-6 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
   .column-md-7 {
     -ms-flex-preferred-size: 58.33333%;
         flex-basis: 58.33333%;
     max-width: 58.33333%;
   }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 767px) {
+  .column-md-7 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
   .column-md-8 {
     -ms-flex-preferred-size: 66.66667%;
         flex-basis: 66.66667%;
     max-width: 66.66667%;
   }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 767px) {
+  .column-md-8 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
   .column-md-9 {
     -ms-flex-preferred-size: 75%;
         flex-basis: 75%;
     max-width: 75%;
   }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 767px) {
+  .column-md-9 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
   .column-md-10 {
     -ms-flex-preferred-size: 83.33333%;
         flex-basis: 83.33333%;
     max-width: 83.33333%;
   }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 767px) {
+  .column-md-10 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
   .column-md-11 {
     -ms-flex-preferred-size: 91.66667%;
         flex-basis: 91.66667%;
     max-width: 91.66667%;
   }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 767px) {
+  .column-md-11 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
   .column-md-12 {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
     max-width: 100%;
   }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 767px) {
+  .column-md-12 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
   .off-md-1 {
     margin-left: 8.33333%;
   }
@@ -5925,61 +6285,193 @@ input[type="submit"] {
         flex-basis: 8.33333%;
     max-width: 8.33333%;
   }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 767px) {
+  .column-lg-1 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
   .column-lg-2 {
     -ms-flex-preferred-size: 16.66667%;
         flex-basis: 16.66667%;
     max-width: 16.66667%;
   }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 767px) {
+  .column-lg-2 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
   .column-lg-3 {
     -ms-flex-preferred-size: 25%;
         flex-basis: 25%;
     max-width: 25%;
   }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 767px) {
+  .column-lg-3 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
   .column-lg-4 {
     -ms-flex-preferred-size: 33.33333%;
         flex-basis: 33.33333%;
     max-width: 33.33333%;
   }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 767px) {
+  .column-lg-4 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
   .column-lg-5 {
     -ms-flex-preferred-size: 41.66667%;
         flex-basis: 41.66667%;
     max-width: 41.66667%;
   }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 767px) {
+  .column-lg-5 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
   .column-lg-6 {
     -ms-flex-preferred-size: 50%;
         flex-basis: 50%;
     max-width: 50%;
   }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 767px) {
+  .column-lg-6 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
   .column-lg-7 {
     -ms-flex-preferred-size: 58.33333%;
         flex-basis: 58.33333%;
     max-width: 58.33333%;
   }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 767px) {
+  .column-lg-7 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
   .column-lg-8 {
     -ms-flex-preferred-size: 66.66667%;
         flex-basis: 66.66667%;
     max-width: 66.66667%;
   }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 767px) {
+  .column-lg-8 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
   .column-lg-9 {
     -ms-flex-preferred-size: 75%;
         flex-basis: 75%;
     max-width: 75%;
   }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 767px) {
+  .column-lg-9 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
   .column-lg-10 {
     -ms-flex-preferred-size: 83.33333%;
         flex-basis: 83.33333%;
     max-width: 83.33333%;
   }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 767px) {
+  .column-lg-10 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
   .column-lg-11 {
     -ms-flex-preferred-size: 91.66667%;
         flex-basis: 91.66667%;
     max-width: 91.66667%;
   }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 767px) {
+  .column-lg-11 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
   .column-lg-12 {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
     max-width: 100%;
   }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 767px) {
+  .column-lg-12 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
   .off-lg-1 {
     margin-left: 8.33333%;
   }
@@ -8256,7 +8748,7 @@ input[type="submit"] {
 
 .card.large .right {
   text-align: center;
-  padding: 2em 0;
+  padding: 0 0 2em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
