--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -82,7 +82,7 @@ $card-right-width: 240px;
     }
     .right {
       text-align: center;
-      padding:2em 0;
+      padding:0 0 2em;
       display:flex;
       justify-content: space-between;
       align-items:center;
