Alerts, separated docs.

--- a/scss/modules/boiler/_boiler.scss
+++ b/scss/modules/boiler/_boiler.scss
@@ -2,7 +2,7 @@
 
 @import 'layout/header';
 @import 'layout/nav';
-@import 'layout/content';
+@import 'layout/burgerdocs';
 @import 'layout/footer';
 
 @include burgerDocs();
