--- a/scss/components/_alerts.scss
+++ b/scss/components/_alerts.scss
@@ -1,29 +1,159 @@
 // alerts
-
+// Settings
+$default-alert-padding: 1em 2em;
+$default-border-radius: 2px;
 .alert {
   width:100%;
   height:auto;
-  padding:2em;
   text-align: left;
-  float: left;
   position:relative;
   .close {
     @include position(absolute, $top:20px, $right: 20px);
+    color:transparentize($black, 0.5);
   }
-  h2, p {
+  h3, p {
+    margin:0;
     clear:both;
     float:left;
+    color:$white;
   }
-  &.error {
-    background: $red;
+}
+
+
+// Preset Button classes
+$alert-colors:  (
+  red: $red,
+  green: $green,
+  transparent: transparent,
+  black: $black,
+  blue: $blue,
+  white: $white,
+  yellow: $yellow,
+  primary: $primary,
+  secondary: $secondary,
+  tertiary: $tertiary,
+  purple: $purple,
+  pink: $pink,
+  orange: $orange,
+  grey: $grey,
+  lime: $lime,
+  brown: $brown,
+  navy: $navy
+);
+
+
+@mixin alert($padding, $text-color, $bg-color, $border-color, $font, $border-radius, $hover-time) {
+  color:$text-color;
+  background: $bg-color;
+  border:1px solid $border-color;
+  padding:$padding;
+  font-family:$font;
+  text-decoration: none;
+  border-radius: $border-radius;
+  text-align: center;
+  /* @include position(absolute, $top:0, $right:0); */
+  @include transition($hover-time all ease-in-out);
+}
+// init default alert
+.alert {
+  font-size:15px;
+  font-weight:300;
+  width:100%;
+  &:hover {
+    background-color:transparent;
+    color:$blue;
   }
-  &.warning {
-    background: $yellow;
-  }
-  &.positive {
-    background: $green;
-    h2, p {
-      color:$white;
+  @each $name, $alert-color in $alert-colors {
+    &.#{$name} {
+      @include alert($default-alert-padding, $white , #{$alert-color}, #{$alert-color} , $sans, $default-border-radius, 0.35s);
+      font-weight:300;
+      border-bottom: 4px solid #{$alert-color};
+      &.hollow {
+        background-color:transparent;
+        border:1px solid #{$alert-color};
+        border-bottom: 4px solid #{$alert-color};
+        color:#{$alert-color};
+        i {
+          color:#{$alert-color};
+        }
+        &:hover {
+          background-color:#{$alert-color};
+        }
+      }
+      &.icon-right, &.icon-left {
+        &:hover {
+          border-color:#{$alert-color};
+          i {
+            background:transparent;
+            color:#{$alert-color};
+          }
+        }
+      }
     }
+    .alert-transparent {
+      &:hover {
+        color:#{$alert-color};
+      }
+    }
+  }
+
+  // hollow alerts
+  &.hollow {
+    &.icon-right, &.icon-left {
+      i {
+        background:transparent;
+      }
+      &:hover {
+        i {
+          color:$white;
+        }
+      }
+    }
+    &:hover {
+      color:$white;
+      i {
+        color:$white;
+      }
+      &.white {
+        color:$black;
+        border-color:$black;
+        background:transparent;
+        i {
+          color:$black;
+        }
+      }
+    }
+  }
+
+  // icon alerts
+  &.icon-right, &.icon-left {
+    position:relative;
+    @include transition(0.35s all ease-in-out);
+    border-bottom: 4px solid transparentize(#000, 0.75);
+    i {
+      background: transparentize(#000, 0.75);
+      @include flex-center(flex, column);
+      height: 100%;
+      width:2em;
+    }
+  }
+  &.icon-right {
+    i {
+      @include position(absolute, $right:0, $top:0);
+    }
+  }
+  &.icon-left {
+    i {
+      @include position(absolute, $left:0, $top:0);
+    }
+  }
+  // pill alerts
+  &.pill {
+    padding: $default-alert-padding;
+    font-size: 1.2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 12rem;
+    transition: color .3s,border .3s;
   }
 }
