--- a/scss/components/components.scss
+++ b/scss/components/components.scss
@@ -13,9 +13,9 @@
 @import 'labels';
 @import 'logo';
 @import 'modals';
+@import 'off-canvas';
 @import 'parallax';
 @import 'print';
 @import 'progress';
-@import 'spinner';
 @import 'tables';
 @import 'tooltips';
