--- a/scss/components/_switch.scss
+++ b/scss/components/_switch.scss
@@ -35,11 +35,11 @@
 }
 
 input:checked + .slider {
-  background-color: $primary;
+  background-color: $blue;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px $primary;
+  box-shadow: 0 0 1px $blue;
 }
 
 input:checked + .slider:before {
